style: footer overflow bug fixed

--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -6,7 +6,6 @@
   align-items: center;
   padding: 20px 0;
   gap: 20px;
-  width: 100vw;
   a,
   p {
     color: black;
